<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacion">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/SS"
            style="@style/Entrada"/>
        <ImageView
            android:layout_width="380dp"
            android:layout_height="220dp"
            android:src="@drawable/sistemasolar"
            style="@style/Descripciones"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DesSS"
            style="@style/Descripciones"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Mer"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mercurio"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InfMer"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DescM"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Ven"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/InfVen"
                style="@style/Descripciones"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginEnd="150dp"
                android:src="@drawable/venus"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DescV"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Tierra"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/tierra"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InfT"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DescT"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Mar"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/DescMa"
                style="@style/Descripciones"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/marte"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/InfMar"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Jup"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/jupiter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InfJup"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DescJ"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Sat"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/InfSat"
                style="@style/Descripciones"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/saturno"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DescS"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Ur"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/urano"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InfUr"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DescU"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Nep"
            style="@style/Titulos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/InfNep"
                style="@style/Descripciones"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/neptuno"
                style="@style/Descripciones"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DescN"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/ButtonInf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Plut"
            style="@style/Titulos"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/InfPlut"
            style="@style/Descripciones"/>
        <ImageView
            android:layout_width="370dp"
            android:layout_height="170dp"
            android:src="@drawable/planetasenanos"
            style="@style/Descripciones"/>
        <Button
            android:id="@+id/B9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            style="@style/ButtonInf"/>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>