<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Bienvenido"
            style="@style/Entrada"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                style="@style/DatosP"
                android:text="@string/Usuario" />
            <EditText
                android:id="@+id/User"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/UsuarioP"
                style="@style/DatoUser" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                style="@style/DatosP"
                android:text="@string/Pass" />
            <EditText
                android:id="@+id/Pass"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/PassP"
                style="@style/DatoPass"/>
        </LinearLayout>

        <Button
            android:id="@+id/Iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/Iniciar"
            style="@style/Button"/>
    </LinearLayout>

</RelativeLayout>